--- a/As3.html
+++ b/As3.html
@@ -42,7 +42,7 @@ display: flex; flex-direction: row; justify-content: left; align-items: center; 
 
 <strong>Name: </strong>
 
-<p> Anudeep Gadi</p>
+<p> vamsi krishna Meka</p>
 
 </div>
 
@@ -50,7 +50,7 @@ display: flex; flex-direction: row; justify-content: left; align-items: center; 
 
 <strong>Student ID : </strong>
 
-<p> 2391</p>
+<p> 16355167</p>
 
 </div>
 
